Bug 1761877 [Linux] Add isWaylandDragSource and isWaylandPopup attributes to XULPopupElement r=emilio

Differential Revision: https://phabricator.services.mozilla.com/D161127